update package.json, adiciona estrutura de buscadores

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/suissa/pleaseGetSomeMusicForMe#readme",
   "dependencies": {
+    "cheerio": "^0.22.0",
     "html-entities": "^1.2.0",
     "inquirer": "^3.0.5",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   },
-  "bin":{
-    "filesearch":"./crawler/index.js"
+  "bin": {
+    "filesearch": "./crawler/index.js"
   }
 }
