--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "fs-extra": "^3.0.1",
     "html-entities": "^1.2.0",
     "inquirer": "^3.0.5",
+    "multi-progress": "^2.0.0",
+    "multimeter": "^0.1.1",
     "progress": "^2.0.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
