--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "inquirer": "^3.0.5",
     "multi-progress": "^2.0.0",
     "multimeter": "^0.1.1",
+    "platform-folders": "^0.4.0",
     "progress": "^2.0.3",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
